@@ -1,3 +1,7 @@
+2007-07-17  Hector E. Gomez M. <hectoregm@gmail.com> 
+
+	* EditorWindow.cs: Editing prototype code.
+
 2007-07-09  Hector E. Gomez M. <hectoregm@gmail.com> 
 
 	* EditorWindow.cs, Monodoc.Editor.mdp, AboutEditorDialog.cs,
